syntax = "proto3";

service ScheduleService {
    rpc GetStudent(GetStudentRequest) returns (StudentResponse) {}

}

message GetStudentRequest {
    int32 studentId = 1;
    string name = 2;
    string surname = 3;
    int32 groupId = 4;
}

message StudentResponse {
    int32 id = 1;
    string name = 2;
    string surname = 3;
    int32 groupId = 4;
}